Update Create a deployment for webapp having 3 replicas of pod, secrets,configmap,service, route in openshift cluster.yaml

--- a/ansible/Create a deployment for webapp having 3 replicas of pod, secrets,configmap,service, route in openshift cluster.yaml
+++ b/ansible/Create a deployment for webapp having 3 replicas of pod, secrets,configmap,service, route in openshift cluster.yaml
@@ -6,7 +6,7 @@ Sure! Here's an example of how you can create a deployment for a web app with 3 
   hosts: localhost
   gather_facts: false
   vars:
-    project_name: vodafone-app
+    project_name: vodafone-app-01
     deployment_name: webapp-deployment
     app_image: ngnix:latest
     replicas: 3
@@ -18,7 +18,7 @@ Sure! Here's an example of how you can create a deployment for a web app with 3 
     configmap:
       - name: app-config
         data:
-          app_url: http://vodafone-app.com
+          app_url: http://vodafone-app-01.com
     service:
       name: webapp-service
       ports:
